# stock-predictor

./: README.md  main.py  pyproject.toml  scratch.py  top-tickers.json
stock_predictor/: config.py
stock_predictor/agents/: __init__.py  api.py  tracker.py
stock_predictor/messages/: __init__.py  tracker_add_ticker.py  tracker_data.py  tracker_error.py
stock_predictor/utils/: predictor.py
stock_predictor_web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
stock_predictor_web/src/: App.tsx  NotFound.tsx  Ticker.tsx  main.tsx  types.ts
stock_predictor_web/src/components/: ErrorMsg.tsx  LoadingIndicator.tsx  Navbar.tsx  StockChart.tsx  StockRow.tsx  index.ts
